--- a/test2.html
+++ b/test2.html
@@ -2,14 +2,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="http://map.vworld.kr/js/vworldMapInit.js.do?version=2.0&apiKey=5181BEF3-A303-3B53-90F8-44F4E82C2BB0"></script>
-    <script src="rbush.js"></script>
+    <script src="quedTree.js"></script>
     <script src="test1.js"></script>
+    <script src="draw.js"></script>
 </head>
 
 <body>
-    <button id="insert">Insert 1000</button>
+    <input type='text' id='insertNumber'></input>
     <button id="test">test</button>
     <div id='vmap'>
     </div>
